src/src/include/deepstate/DeepState.h

/* Portable and architecture-independent memory scrub without dead store elimination. */
extern void *DeepState_MemScrub(void *pointer, size_t data_size);
/* Result of a single forked test run.
 *
 * Will be passed to the parent process as an exit code. */
enum DeepState_TestRunResult {
  DeepState_TestRunPass = 0,
  DeepState_TestRunFail = 1,
  DeepState_TestRunCrash = 2,
  DeepState_TestRunAbandon = 3,
};
/* Contains information about a test case */
struct DeepState_TestInfo {
  struct DeepState_TestInfo *prev;
  void (*test_func)(void);
  const char *test_name;
  const char *file_name;
  unsigned line_number;
};
struct DeepState_TestRunInfo {
  struct DeepState_TestInfo *test;
  enum DeepState_TestRunResult result;
  const char *reason;
};
/* Pointer to the last registered `TestInfo` structure. */
extern struct DeepState_TestInfo *DeepState_LastTestInfo;
/* Pointer to first structure of ordered `TestInfo` list (reverse of LastTestInfo). */
extern struct DeepState_TestInfo *DeepState_FirstTestInfo;
extern int DeepState_TakeOver(void);
/* Set up DeepState. */
extern void DeepState_Setup(void);
/* Tear down DeepState. */
extern void DeepState_Teardown(void);
/* Notify that we're about to begin a test while running under Dr. Fuzz. */
extern void DeepState_BeginDrFuzz(struct DeepState_TestInfo *info);
/* Notify that we're about to begin a test. */
extern void DeepState_Begin(struct DeepState_TestInfo *info);
/* Return the first test case to run. */
extern struct DeepState_TestInfo *DeepState_FirstTest(void);
/* Returns `true` if a failure was caught for the current test case. */
extern bool DeepState_CatchFail(void);
/* Returns `true` if the current test case was abandoned. */
extern bool DeepState_CatchAbandoned(void);
/* Save a passing test to the output test directory. */
extern void DeepState_SavePassingTest(void);
/* Save a failing test to the output test directory. */
extern void DeepState_SaveFailingTest(void);
/* Save a crashing test to the output test directory. */
extern void DeepState_SaveCrashingTest(void);
/* Jump buffer for returning to `DeepState_Run`. */
extern jmp_buf DeepState_ReturnToRun;
extern void DeepState_Warn_srand(unsigned int seed);
extern enum DeepState_TestRunResult DeepState_FuzzOneTestCase(struct DeepState_TestInfo *test);
extern int DeepState_Fuzz(void);