src/include/deepstate/Option.h

/* Backing structure for describing command-line options to DeepState. */
struct DeepState_Option {
  struct DeepState_Option *next;
  const char * const name;
  const char * const alt_name;  /* Only used for booleans. */
  DeepState_OptGroup group;
  void (* const parse)(struct DeepState_Option *);
  void * const value;
  int * const has_value;
  const char * const docstring;
};