cargo-deepstate/src/bindings.rs


extern "C" {
    pub static mut DeepState_LastTestInfo: *mut DeepState_TestInfo;
}
extern "C" {
    pub static mut DeepState_FirstTestInfo: *mut DeepState_TestInfo;
}
extern "C" {
    pub fn DeepState_TakeOver() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn DeepState_Setup();
}
extern "C" {
    pub fn DeepState_Teardown();
}
extern "C" {
    pub fn DeepState_BeginDrFuzz(info: *mut DeepState_TestInfo);
}
extern "C" {
    pub fn DeepState_Begin(info: *mut DeepState_TestInfo);
}
extern "C" {
    pub fn DeepState_FirstTest() -> *mut DeepState_TestInfo;
}
extern "C" {
    pub fn DeepState_CatchFail() -> bool;
}
extern "C" {
    pub fn DeepState_CatchAbandoned() -> bool;
}
extern "C" {
    pub fn DeepState_SavePassingTest();
}
extern "C" {
    pub fn DeepState_SaveFailingTest();
}
extern "C" {
    pub fn DeepState_SaveCrashingTest();
}
extern "C" {
    pub static mut DeepState_ReturnToRun: jmp_buf;
}
extern "C" {
    pub fn DeepState_Warn_srand(seed: ::std::os::raw::c_uint);
}
extern "C" {
    pub fn DeepState_FuzzOneTestCase(test: *mut DeepState_TestInfo) -> DeepState_TestRunResult;
}
extern "C" {
    pub fn DeepState_Fuzz() -> ::std::os::raw::c_int;
}
extern "C" {
    pub static mut DeepState_Option_input_test_dir: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_input_test_file: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_input_test_files_dir: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_output_test_dir: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_take_over: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_abort_on_fail: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_exit_on_fail: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_verbose_reads: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_min_log_level: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_timeout: DeepState_Option;
}
extern "C" {
    pub static mut HAS_FLAG_num_workers: ::std::os::raw::c_int;
}
extern "C" {
    pub static mut FLAGS_num_workers: ::std::os::raw::c_uint;
}
extern "C" {
    pub static mut DeepState_Option_num_workers: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_fuzz: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_fuzz_save_passing: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_fork: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_seed: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_input_which_test: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_test_filter: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_list_tests: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_boring_only: DeepState_Option;
}
extern "C" {
    pub static mut DeepState_Option_run_disabled: DeepState_Option;
}
pub const DeepState_LibFuzzerLoud: ::std::os::raw::c_int = 0;
extern "C" {
    pub static mut DeepState_GeneratedStrings: [*mut ::std::os::raw::c_char; 8192usize];
}
pub const DeepState_GeneratedStringsIndex: u32 = 0;
extern "C" {
    pub static mut DeepState_DrFuzzTest: *mut DeepState_TestInfo;
}
extern "C" {
    pub static mut DeepState_CurrentTestRun: *mut DeepState_TestRunInfo;
}
extern "C" {
    pub fn DeepState_AllocCurrentTestRun();
}
extern "C" {
    pub fn DeepState_MemScrub(
        pointer: *mut ::std::os::raw::c_void,
        data_size: usize,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn _DeepState_StreamInt(
        level: DeepState_LogLevel,
        format: *const ::std::os::raw::c_char,
        unpack: *const ::std::os::raw::c_char,
        val: *mut u64,
    );
}
extern "C" {
    pub fn _DeepState_StreamFloat(
        level: DeepState_LogLevel,
        format: *const ::std::os::raw::c_char,
        unpack: *const ::std::os::raw::c_char,
        val: *mut f64,
    );
}
extern "C" {
    pub fn _DeepState_StreamString(
        level: DeepState_LogLevel,
        format: *const ::std::os::raw::c_char,
        str: *const ::std::os::raw::c_char,
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DeepState_IndexEntry {
    pub name: *const ::std::os::raw::c_char,
    pub address: *mut ::std::os::raw::c_void,
}

extern "C" {
    pub static mut DeepState_API: [DeepState_IndexEntry; 24usize];
}
extern "C" {
    pub fn DrMemFuzzFunc(buff: *mut u8, size: usize);
}
extern "C" {
    pub fn DeepState_RunSavedTakeOverCases(env: *mut __jmp_buf_tag, test: *mut DeepState_TestInfo);
}
extern "C" {
    pub fn makeFilename(name: *mut ::std::os::raw::c_char, size: usize);
}
extern "C" {
    pub fn writeInputData(name: *mut ::std::os::raw::c_char, important: ::std::os::raw::c_int);
}
extern "C" {
    pub fn LLVMFuzzerTestOneInput(Data: *const u8, Size: usize) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn FuzzerEntrypoint(data: *const u8, size: usize) -> ::std::os::raw::c_int;
}
